@@ -1,3 +1,9 @@
+2015-06-22  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/configure (help): Add STM32_PRIMER2.
+
+	* src/sys.c: Update from chopstx/example-cdc/sys.c.
+
 2015-03-17  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.0.1c.
